--- a/sass/pages/produit.scss
+++ b/sass/pages/produit.scss
@@ -1,3 +1,4 @@
+ 
   #choix_option
   {
     margin-bottom: 1rem;
@@ -9,6 +10,7 @@
     justify-content: flex-end;
     margin-right: 2rem;
     margin-top: 2rem;
+    padding-bottom: 2rem;
     a {
       border: 0.3rem solid ;
       padding: 1rem;
