--- a/sass/pages/panier.scss
+++ b/sass/pages/panier.scss
@@ -1,3 +1,12 @@
+.totalAchat{
+  padding-top: 25px;
+  color:$color-hover;
+  text-decoration: underline;
+  display: flex;
+  justify-content: flex-end;
+  width: 250%;
+}
+
 .formulaire_commande,
   .recapitulatif {
     text-align: center;
@@ -43,10 +52,7 @@
     flex-direction: column;
   }
   
-  .paiement {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
+  
 
   input:invalid,
   textarea:invalid,
@@ -66,4 +72,19 @@
   #email {
     width: 70%;
     margin: auto;
+  }
+
+  .bouton-supprimer{
+  font-size: 1rem;
+  font-family: $font-family;
+  font-weight: bold;
+  color: $color-primary;
+  border :0.2rem solid;
+  padding: 0.5rem;
+  background-color: rgba(117, 190, 218, 0.0); /* 0.0 - transparent */
+  &:hover {
+    cursor: pointer;
+    color: $color-hover;
+    border-style:$color-hover;
+  }
   }
