--- a/sass/pages/confirmation_orinounours.scss
+++ b/sass/pages/confirmation_orinounours.scss
@@ -21,3 +21,29 @@
   #orderId {
     color: $color-valid;
   }
+  #commander {
+    margin-top: 15px;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    font-family: $font-family;
+    font-weight: bold;
+    color: $color-primary;
+    border :0.3rem solid;
+    padding: 1rem;
+    background-color: rgba(117, 190, 218, 0.0); /* 0.0 - transparent */
+    &:hover {
+      cursor: pointer;
+      color: $color-hover;
+      border-style:$color-hover;
+    }
+    
+  }
+
+  .totalValide{
+    padding-top: 25px;
+    color:$color-hover;
+    text-decoration: underline;
+    display: flex;
+    justify-content: flex-end;
+    width: 200%;
+  }
