--- a/sass/pages/produit.scss
+++ b/sass/pages/produit.scss
@@ -17,15 +17,21 @@
     }
      }
   #ajout_panier {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-    &:hover {
-      cursor: pointer;
-      color: $color-hover;
-    }
-    
+  margin-top: 15px;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  font-family: $font-family;
+  font-weight: bold;
+  color: $color-primary;
+  border :0.3rem solid;
+  padding: 1rem;
+  background-color: rgba(117, 190, 218, 0.0); /* 0.0 - transparent */
+  &:hover {
+    cursor: pointer;
+    color: $color-hover;
+    border-style:$color-hover;
   }
-
+}
 
 
 
